--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enfyra-app",
-  "version": "0.1.1-beta",
+  "version": "0.1.2-beta",
   "description": "Dynamic admin interface for Enfyra backend - auto-generates management UI from database schemas",
   "license": "MIT",
   "author": "dothinh115 <dothinh115@gmail.com>",
@@ -74,7 +74,8 @@
     "vite": "^6.3.5",
     "vue": "^3.5.16",
     "vue-json-pretty": "^2.5.0",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "lodash-es": "latest"
   },
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
   "devDependencies": {
