--- a/package.json
+++ b/package.json
@@ -68,14 +68,15 @@
     "css": "^3.0.0",
     "eslint": "^9.31.0",
     "jszip": "^3.10.1",
+    "lodash-es": "latest",
+    "mongodb": "^6.20.0",
     "nuxt": "^4.0.3",
     "nuxt-codemirror": "0.0.16",
     "tinymce": "^7.9.1",
     "vite": "^6.3.5",
     "vue": "^3.5.16",
     "vue-json-pretty": "^2.5.0",
-    "vue-router": "^4.5.1",
-    "lodash-es": "latest"
+    "vue-router": "^4.5.1"
   },
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
   "devDependencies": {
