--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enfyra-app",
-  "version": "0.3.1-beta",
+  "version": "0.3.2-beta",
   "description": "Dynamic admin interface for Enfyra backend - auto-generates management UI from database schemas",
   "license": "MIT",
   "author": "dothinh115 <dothinh115@gmail.com>",
@@ -63,6 +63,7 @@
     "@types/jszip": "^3.4.0",
     "@typescript-eslint/parser": "^8.37.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vueuse/motion": "^3.0.3",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
     "css": "^3.0.0",
