--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@codemirror/search": "^6.5.11",
     "@codemirror/view": "^6.38.0",
     "@enfyra/sdk-nuxt": "^0.3.8",
+    "@formkit/auto-animate": "^0.9.0",
     "@iconify-json/lucide": "^1.2.49",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/ui": "^3.3.2",
@@ -63,7 +64,6 @@
     "@types/jszip": "^3.4.0",
     "@typescript-eslint/parser": "^8.37.0",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vueuse/motion": "^3.0.3",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
     "css": "^3.0.0",
