feat: enhance code editor and form components with improved diagnostics and theme integration
- Updated CodeEditor.vue to utilize the new vscode theme and improved diagnostics handling.
- Enhanced FieldRenderer.vue to provide more detailed error messages based on diagnostics.
- Refined useCodeMirrorExtensions.ts to integrate JSHint for better linting and error reporting.
- Adjusted ColumnSelector.vue and FileGridCard.vue to support new prop types for better flexibility.
- Changed form mode from 'edit' to 'update' in relevant components for clearer functionality.
- Added new dependencies in package.json for improved code quality and theme support.

--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
     "@tanstack/vue-table": "^8.21.3",
     "@types/jszip": "^3.4.0",
     "@typescript-eslint/parser": "^8.37.0",
+    "@uiw/codemirror-theme-vscode": "^4.25.3",
     "@vitejs/plugin-vue": "^6.0.1",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
     "css": "^3.0.0",
     "eslint": "^9.31.0",
+    "jshint": "^2.13.6",
     "jszip": "^3.10.1",
     "lodash-es": "latest",
     "mongodb": "^6.20.0",
@@ -81,6 +83,7 @@
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@types/jshint": "^2.12.4",
     "@types/lodash": "^4.17.20",
     "@types/lodash-es": "^4.17.12",
     "@vitest/coverage-v8": "^2.1.2",
