--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enfyra-app",
-  "version": "0.4.1-beta",
+  "version": "0.5.0-beta",
   "description": "Dynamic admin interface for Enfyra backend - auto-generates management UI from database schemas",
   "license": "MIT",
   "author": "dothinh115 <dothinh115@gmail.com>",
@@ -60,17 +60,15 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/vue-table": "^8.21.3",
-    "@types/jszip": "^3.4.0",
     "@typescript-eslint/parser": "^8.37.0",
     "@uiw/codemirror-theme-vscode": "^4.25.3",
     "@vitejs/plugin-vue": "^6.0.1",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
-    "css": "^3.0.0",
     "eslint": "^9.31.0",
-    "jshint": "^2.13.6",
-    "jszip": "^3.10.1",
+    "highlight.js": "^11.11.1",
     "lodash-es": "latest",
+    "marked": "^17.0.0",
     "mongodb": "^6.20.0",
     "nuxt": "^4.0.3",
     "nuxt-codemirror": "0.0.16",
@@ -83,7 +81,6 @@
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.10",
-    "@types/jshint": "^2.12.4",
     "@types/lodash": "^4.17.20",
     "@types/lodash-es": "^4.17.12",
     "@vitest/coverage-v8": "^2.1.2",
