--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enfyra-app",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Dynamic admin interface for Enfyra backend - auto-generates management UI from database schemas",
   "license": "MIT",
   "author": "dothinh115 <dothinh115@gmail.com>",
@@ -63,16 +63,19 @@
     "@vue-flow/minimap": "^1.5.4",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
+    "chart.js": "4.5.1",
     "eslint": "^9.31.0",
     "highlight.js": "^11.11.1",
     "lodash-es": "^4.17.21",
     "marked": "^17.0.0",
     "mongodb": "^6.20.0",
+    "ms": "2.1.3",
     "nuxt": "^4.2.1",
     "nuxt-codemirror": "0.0.16",
     "tinymce": "^7.9.1",
     "vite": "^6.3.5",
     "vue": "^3.5.25",
+    "vue-chartjs": "5.3.3",
     "vue-json-pretty": "^2.5.0",
     "vue-router": "^4.5.1",
     "vuedraggable": "^4.1.0"
